--- a/readme
+++ b/readme
@@ -3,3 +3,7 @@ TO install mysql
 npm install --save mysql2
 
 npm install --save sequelize
+
+#MongoDb
+add mongodb driver 
+npm install --save mongodb
