--- a/readme
+++ b/readme
@@ -9,3 +9,7 @@ add mongodb driver
 npm install --save mongodb
 
 I hosted mongodb locally
+
+start using mongoose
+npm install --save mongoose
+I also truncated the db
