--- a/readme
+++ b/readme
@@ -19,3 +19,6 @@ npm install --save express-session
 
 adding a package to save session in mongodb
 npm install --save connect-mongodb-session
+
+installing bcryptjs package to hash our passwords
+npm install --save bcryptjs
