--- a/readme
+++ b/readme
@@ -25,3 +25,6 @@ npm install --save bcryptjs
 
 protecting our site from csrf attacks
 npm install --save csurf
+
+adding a package to handel messages to users
+npm install --save connect-flash
