using pdfkit npm install --save pdfkit
creating a pdf on the fly

--- a/readme
+++ b/readme
@@ -37,3 +37,6 @@ npm install --save express validator
 
 adding ability to add file to form
 npm install --save multer
+
+using pdfkit
+npm install --save pdfkit
