using morgan for log

--- a/readme
+++ b/readme
@@ -49,3 +49,6 @@ npm install --save helmet
 
 using compression
 npm install --save compression
+
+using morgan for better log 
+npm install --save morgan
